# bmpi-index

./: .gitignore  LICENSE  README.md  gdelt_fill_missing.py  pyproject.toml  requirements.txt
data/raw/gdelt/: gdelt_gkg_bitcoin_daily_signal_ALL.csv  gdelt_gkg_bitcoin_daily_signal_sensitive.csv  gdelt_gkg_bitcoin_daily_signal_strong.csv
data/raw/market/: DTWEXBGS.csv  Gold_Futures_Historical_Data.csv  NASDAQCOM.csv  btcusdmax.csv  ethusdmax.csv
docs/: README.md  bmpi_calculator.html
src/bmpi/: __init__.py  bmpi_core.py  config.py
src/bmpi/pipelines/: step01_normalize_datasets.py  step02_align_and_features.py  step03_peak_detection.py  step04_baseline_model.py  step05_residuals.py  step06_merge_news_market.py  step07_news_effect_model.py  step08_event_level_impact.py  step09_fake_classification.py  step10_robustness_analysis.py  step11_advanced_metrics.py  step12_cross_preset_analysis.py  step13_granger_causality.py  step14_oos_validation.py  step15_benchmark_comparison.py  step16_johansen_cointegration.py  step17_trading_strategy.py
src/bmpi/utils/: checkpoint.py  download_gdelt_events_peak_articles_jsonl.py  gdelt_btc_downloader.py  gdelt_extractor.py  old_balanced.csv  сonvert_balanced_checkpoint.py
tests/: test_bmpi_core.py
