[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name             = "bmpi-index"
version          = "2.0.0"
description      = "BMPI — Bitcoin Media Pressure Index: a daily anomalous media coverage signal for cryptocurrency markets"
readme           = "README.md"
license          = { text = "MIT" }
requires-python  = ">=3.10"
keywords = [
    "bitcoin", "cryptocurrency", "media pressure", "index",
    "GDELT", "sentiment", "mean reversion", "financial economics",
    "time series", "anomaly detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.4.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8.0", "seaborn>=0.13.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.4.0"]

[project.scripts]
bmpi-download = "bmpi.utils.gdelt_btc_downloader:main"

[project.urls]
Homepage   = "https://github.com/ParfenovichDmitry/bmpi-index"
Repository = "https://github.com/ParfenovichDmitry/bmpi-index"
Issues     = "https://github.com/ParfenovichDmitry/bmpi-index/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"